--- a/therapy_game/package.json
+++ b/therapy_game/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@elevenlabs/react": "^0.14.0",
     "convex": "^1.32.0",
+    "neo4j-driver": "^6.0.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
